--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mashiur Rahman</title>
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/style.css">
+
 </head>
-<body>
-    
+
+<body class="font-open-scans">
+    <header>
+        <nav>
+            <div class="logo">
+                <h2>Mas<span class="color-orange">h</span>iur</h2>
+            </div>
+            <ul class="manue">
+                <li>Portfolio</li>
+                <li>Blog</li>
+                <li><button>Hire Me</button></li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
