modefy manue bar

--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
             <ul class="manue">
                 <li>Portfolio</li>
                 <li>Blog</li>
-                <li><button>Hire Me</button></li>
+                <li><button class="btn">Hire Me</button></li>
             </ul>
         </nav>
     </header>
+    <main>
+
+    </main>
 </body>
 
 </html>
