Banner section add image and style with css

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 </head>
 
-<body class="font-open-scans">
-    <header>
+<header class="font-open-scans">
+    
         <nav>
             <div class="logo">
                 <h2>Mas<span class="color-orange">h</span>iur</h2>
@@ -27,10 +27,26 @@
                 <li><button class="btn">Hire Me</button></li>
             </ul>
         </nav>
-    </header>
-    <main>
+      </header>
+      <main>
+        <section id="banner">
+            <div class="banner-container" id="">
+                <div id="container">
+                    <h2> Hi, I am</h2>
+                    <h1>Mashiur Rahman</h1>
+                    <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                    <div>
+                     <button class="btn">Download CV</button>
+                    <button class="">Contact</button>
+                    </div>
+                </div>
+                <div class="banner-img">
+                    <img src="images/hero.png" alt="">
+                </div>
+            </div>
+        </section>
 
-    </main>
+  </main>
 </body>
 
 </html>
